--- a/Componentes/vite-project/src/components/Cards/Cards.css
+++ b/Componentes/vite-project/src/components/Cards/Cards.css
@@ -1,3 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+
 .card {
-    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    font-family: 'Poppins';
+    font-weight: 500;
+    font-size: 24px;
+}
+
+.card img {
+    width: 90%;
 }
