--- a/Componentes/vite-project/src/components/Header/Header.css
+++ b/Componentes/vite-project/src/components/Header/Header.css
@@ -1,19 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
 .header {
+    margin: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 25px;
     height: 60px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: 'Poppins';
+    font-size: 16px;
 }
-
-.logo img {
-    width: fit-content;
-    height: fit-content;
-}
-
 .section-h {
     align-items: center;
     display: flex;
@@ -21,6 +20,19 @@
     gap: 5px;
 }
 
+.section-a {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 65px;
+    font-weight: 500;
+}
+
 .section-h img {
-    width: 100%;
+    width: 80%;
+}
+
+.section-icons {
+    display: flex;
+    gap: 30px;
 }
