--- a/Componentes/vite-project/src/components/Footer/Footer.css
+++ b/Componentes/vite-project/src/components/Footer/Footer.css
@@ -38,3 +38,28 @@ h4 {
     text-decoration: underline;
     text-underline-offset: 5px;
 }
+.footer-newsletter input {
+    border: none;
+    border-bottom: 1.5px solid #3a3a3a;
+    padding: 3.5px;
+}
+.footer-newsletter input::placeholder {
+    color: #9f9f9f;
+}
+
+.footer-final {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 20px 100px;
+    font-size: 14px;
+    font-family: 'Poppins';
+    gap: 25px;
+}
+.footer-final p {
+    font-weight: 500;
+}
+
+hr {
+    border-top: 1px solid #d9d9d9;
+}
